# work-igh-1.6.0

./: .clang-format  .gitignore  CMakeLists.txt  README.md
GSD620/: CMakeLists.txt
GSD620/include/: ethercat_master.h
GSD620/include/igh_master/: app_config.h  ethercat_master.h
GSD620/src/: drive_pdo.c  ethercat_master.c  main.c
SIASUN/: CMakeLists.txt
SIASUN/include/: app_config.h  axis_config.h  ethercat_app.h  pdo_config.h  sdo_parameter.h
SIASUN/src/: axis_config.cpp  ethercat_app.cpp  main.cpp  sdo_parameter.cpp
SIASUN/test/: CMakeLists.txt  README.md  SIASUN_realtime_test_report_20260630.md  realtime_communication_test.cpp  run_igh_master_test.sh  run_realtime_test.sh
SINSUN/: CMakeLists.txt
SINSUN/include/: app_config.h  ethercat_app.h  pdo_config.h
SINSUN/src/: axis_config.cpp  ethercat_app.cpp  main.cpp  sdo_parameter.cpp
doc/GSD620/: VMMORE_drive_GSD620_EtherCAT_v1.7.xml
doc/SIASUN/gcr10_1300/: Axis1.xml  Axis2.xml  Axis3.xml  Axis6.xml
include/igh_master/: app_config.h  drive_pdo.h  ethercat_master.h
src/: drive_pdo.c  ethercat_master.c  main.c
